log
Wed, Mar 26, 2025  9:05:51 AM: 
 tests:  0|6
total_score: 0/70
25021aa
Wed, Mar 26, 2025  9:11:51 AM: 
 list.c | 9 +++++++--
 1 file changed, 7 insertions(+), 2 deletions(-)
 tests:  0|0
09fc6b7
Wed, Mar 26, 2025  9:12:36 AM: 
 list.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
4269e43
Wed, Mar 26, 2025  9:14:03 AM: 
 list.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  0|0
ad6d68c
Wed, Mar 26, 2025  9:15:45 AM: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  2|5
total_score: 15/70
2f6e9e2
Wed, Mar 26, 2025  9:16:36 AM: 
 list.c | 3 ---
 1 file changed, 3 deletions(-)
 tests:  0|0
a8e7216
Wed, Mar 26, 2025  9:17:00 AM: 
 list.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  0|0
d7317ba
Wed, Mar 26, 2025  9:17:31 AM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
e0cc71c
Wed, Mar 26, 2025  9:22:35 AM: 
 list.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  2|5
total_score: 15/70
10dadf1
Wed, Mar 26, 2025  9:25:47 AM: 
 list.c | 11 ++++++++++-
 1 file changed, 10 insertions(+), 1 deletion(-)
 tests:  0|0
21d3597
Wed, Mar 26, 2025  9:26:18 AM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|4
total_score: 25/70
ba4c1a9
mi., 26 de mar. de 2025 21:24:53: 
 list.c | 6 ++++++
 1 file changed, 6 insertions(+)
 tests:  5|4
total_score: 25/70
c20324c
mi., 26 de mar. de 2025 21:29:23: 
 list.c | 8 ++------
 1 file changed, 2 insertions(+), 6 deletions(-)
 tests:  5|4
total_score: 25/70
225c6ac
mi., 26 de mar. de 2025 21:31:21: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|4
total_score: 25/70
ed688d6
mi., 26 de mar. de 2025 21:31:57: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|4
total_score: 25/70
bf1b45d
mi., 26 de mar. de 2025 21:34:32: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
list.c: In function 'lastList':
list.c:62:19: error: statement with no effect [-Werror=unused-value]
     list->current == list->tail;
     ~~~~~~~~~~~~~~^~~~~~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
397ea8f
mi., 26 de mar. de 2025 21:34:42: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|4
total_score: 25/70
9716b59
mi., 26 de mar. de 2025 21:35:30: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|4
total_score: 25/70
f823596
mi., 26 de mar. de 2025 21:37:48: 
 list.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
 tests:  6|4
total_score: 25/70
bcfd718
mi., 26 de mar. de 2025 21:38:05: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|4
total_score: 25/70
e26307b
ju., 27 de mar. de 2025 20:09:49: 
 list.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
 tests:  5|4
total_score: 25/70
4d28dd5
ju., 27 de mar. de 2025 20:12:07: 
 list.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
 tests:  6|4
total_score: 25/70
a60740a
ju., 27 de mar. de 2025 20:18:37: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|4
total_score: 25/70
e08a9fd
